fix css change password overflow

--- a/web/src/css/change_password.css
+++ b/web/src/css/change_password.css
@@ -4,6 +4,7 @@ display: grid;
 width: 100%;
 height: calc(100vh - 75px);
 grid-template-columns: 1fr 1fr ;
+
 }
 
 .leftSide {
@@ -14,13 +15,12 @@ grid-template-columns: 1fr 1fr ;
     background-size: cover;
     justify-content: center;
     align-items: center;
-    min-height: 100%;
-    width: 100%;
 }
 
 .rightSide {
     padding: 50px 200px;
     width: calc(100% - 400px);
+    overflow-y: scroll;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -29,9 +29,9 @@ grid-template-columns: 1fr 1fr ;
 }
 
 h1 {
-font-size: 47px;
-margin-bottom: 50px;
-text-align: center;
+    font-size: 47px;
+    margin-bottom: 50px;
+    text-align: center;
 }
 
 #form {
@@ -77,9 +77,8 @@ color: black;
         display: none;
     }   
 
-    .contenedor {
-        display: flex;
+    .rightSide {
+        width: calc(100% - 30px);
+        padding: 15px;
     }
-    
-
 }
