--- a/web/src/css/main.css
+++ b/web/src/css/main.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+
 }
 
 body {
@@ -8,7 +9,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    min-height: 100vh;
+    min-height: max(100vh, 800px);
     line-height: 1.5;
     margin: 0px;
     padding: 0px;
@@ -34,6 +35,7 @@ h1, h2, h3, h4 {
     gap: 10px;
     backdrop-filter: blur(1.5px);
     transition: all 0.3s ease;
+    
 }
 
 input {
